--- a/verlen.ini
+++ b/verlen.ini
@@ -1,5 +1,4 @@
 [UPD]
-v=1.2
-build=2
-des=Вышло обновление! [Обновление от 02.07.2018]
+last=1.2
+new=2
 upd=Добавлена команда /inv, /uninv, /smena
