--- a/verlen.ini
+++ b/verlen.ini
@@ -1,4 +1,4 @@
 [UPD]
-last=1.2
-newv=2
-upd=Добавлена команда /inv, /uninv, /smena
+v=1.2
+build=2
+lin=https://raw.githubusercontent.com/btrtmr18/MoD/master/verlen.ini/raw=true
