--- a/verlen.ini
+++ b/verlen.ini
@@ -1,4 +1,4 @@
 [UPD]
-v=1.2
-build=2
-lin=https://githubusercontent.com/btrtmr18/MoD/master/verlen.ini/raw=true
+v=1.1
+build=1
+lin=https://raw.githubusercontent.com/btrtmr18/MoD/master/verlen.ini
