--- a/verlen.ini
+++ b/verlen.ini
@@ -1,4 +1,4 @@
 [UPD]
 v=1.1
 build=1
-lin=https://raw.githubusercontent.com/btrtmr18/MoD/master/verlen.ini
+lin=https://githubusercontent.com/btrtmr18/MoD/master/verlen.ini/raw=true
